--- a/css/main.css
+++ b/css/main.css
@@ -531,6 +531,15 @@ html ul.tabs li.active, html ul.tabs li.active a:hover  {color: #fff; cursor: po
     color:#444444;
     font-weight: 400; 
   }
+  
+  .subcont_txt1  .boldtext{
+    font-size: 18px;
+    line-height: 24px;
+    text-align: center;
+    color:#444444;
+    font-weight: 600; 
+
+  }
   .sub0101_01{
     text-align: center;
     padding-top:40px;
@@ -752,4 +761,86 @@ html ul.tabs li.active, html ul.tabs li.active a:hover  {color: #fff; cursor: po
   line-height:18px;
   padding-top:20px;
   padding-left:10px;
+}
+
+
+.sub0105_ul{
+  position: relative;
+  margin-top:60px;
+  border-top: 3px solid #9b9b9b;
+  
+}
+.sub0105_ul li{
+  
+}
+.sub0105_table{
+  position: relative;
+  
+}
+.sub0105_table tr td{
+    vertical-align: top;
+    padding:40px 0 40px 0;
+    border-bottom: 1px solid #d7d7d7;
+}
+.sub0105_table tr td.one_photo{
+  width: 510px;
+
+}
+
+.sub0105_boximg{
+  font-size: 0;
+  padding: 9;
+  margin: 0;
+  list-style: none;;
+}
+.sub0105_boximg li{
+  display: inline-block;
+  margin-right:7px;
+
+}
+.sub0105_boximg li:last-child{
+  margin-right: 0;
+}
+.sub0105box_t1{
+  font-size:24px;
+  font-weight: 600;
+  color:#222222;
+  padding-top:25px;
+  padding-left: 30px;
+  padding-bottom: 29px;
+}
+.sub0105box_t2{
+  font-size:14px;
+  line-height: 20px;
+  font-weight: 400;
+  color:#444444;
+  height:78px;
+  padding-left: 30px;
+}
+.maps_box{
+  border-top:2px solid #222222;
+  padding-top:39px;
+  margin-top:50px;
+  height:560px;
+}
+.maps_bottom{
+  padding-top:61px
+}
+.maps_bottom li{
+  display: inline-block; 
+  vertical-align: top;
+}
+.maps_txtbox{
+  width: 196px;
+  height:106px;
+  line-height: 106px;;
+  text-align: center;
+  border:1px solid #ebebeb;
+  margin-right: 23px;;
+}
+.maps_txt1{
+  background:url("../images/icon_maps.png") no-repeat;
+  border-bottom:1px solid #ebebeb;
+  width: 100%;
+  height:37px;
 }
